force-app/main/default/objects/FNS_CollateralDocument__c/FNS_CollateralDocument__c.object-meta.xml
<CustomObject>
    <label>Collateral Document</label>
    <nameField>
        <label>Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>