force-app/main/default/objects/FNS_CollateralDocument__c/fields/FNS_CollateralExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CollateralExtId__c</fullName>
    <label>Collateral ExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>