force-app/main/default/objects/FNS_CollateralDocument__c/fields/FNS_DocumentExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_DocumentExtId__c</fullName>
    <label>FNS_DocumentExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>