force-app/main/default/objects/FNS_CollateralDocument__c/fields/FNS_DocumentId__c.field-meta.xml
<CustomField>
    <fullName>FNS_DocumentId__c</fullName>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>